<resources>
    <string name="app_name">کتابخانه</string>
    <string name="action_switch_layout">Switch Layout</string>

    <string name="title">عنوان:</string>
    <string name="author">نویسنده:</string>
    <string name="publisher">ناشر:</string>
    <string name="yearOfPublication">سال نشر:</string>
    <string name="edition">نوبت چاپ:</string>
    <string name="ISBN">شابک:</string>
    <string name="pageNumber">تعداد صفحات:</string>
    <string name="summary">خلاصه:</string>



    <string name="title1">چایت را من شیرین می\u200Cکنم</string>
    <string name="author1">زهرا بلنددوست</string>
    <string name="publisher1">انتشارات کتابستان معرفت</string>
    <string name="ISBN1">978–6008460220</string>
    <string name="summary1">چایت را من شیرین می‌کنم، اثری است که با دغدغه‌ی شناخت دقیق اسلام و تشیع، داستانی طولانی از زندگی یک دختر ایرانی‌الاصل را روایت می‌کند که با پدری منافق و مادری مسلمان، در کنار برادری از جنس خود، در دیار غربت زندگی می‌کند. اما هم‌زمان، تبلیغات داعش در سراسر جهان، شدت گرفته. این خانواده نیز، از این چالش مستثنا نیستند…</string>

    <string name="title2">نامیرا</string>
    <string name="author2">صادق کرمیار</string>
    <string name="publisher2">انتشارات نیستان</string>
    <string name="ISBN2">978–9643375140</string>
    <string name="summary2">دختر و پسری جوان از اهالی کوفه به دور از سودجویی‌های معمول و رو به افزایش مردم این شهر به دنبال حقیقت می‌گردند اما در میان رفتارهای متناقض سرداران و  بزرگان کوفه، بین حمایت از امام حسین (ع) و وفاداری به یزید سرگردان مانده‌اند.
این رمان، داستانی شخصیت‌محور دارد با خرده‌روایت‌هایی که از تغییر روش، هدف، آرزو و سرانجام آدم‌ها می‌گویند. این روزگار است که انسان را در ترازوی تصمیم‌گیری می‌‌گذارد. انتخاب کند یا انتخاب شود؟</string>

    <string name="title3">آبنبات هل\u200Cدار</string>
    <string name="author3">مهرداد صدقی</string>
    <string name="publisher3">انتشارات سوره مهر</string>
    <string name="ISBN3">978–2041755163</string>
    <string name="summary3">کتاب آبنبات هل‌دار داستانی طنز از حال‌و هوای پشت جبهه در دوران دفاع مقدس است. این داستان از زبان یک کودک بجنوردی به نام محسن روایت می‌شود که برادرش به جبهه می‌رود. محسن، راوی داستان، فرزند آخر یک خانوادة پنج‌نفری است. آن‌ها همراه مادربزرگشان در یکی از محله‌های قدیم بجنورد زندگی می‌کنند. فضای داستان سرتاسر ماجراهای خنده‌دار و حیرت‌آور است؛ ماجراهایی که محسن آن‌ها را ایجاد می‌کند.</string>

    <string name="title4">استاد عشق</string>
    <string name="author4">ایرج حسابی</string>
    <string name="publisher4">سازمان چاپ و انتشارات</string>
    <string name="ISBN4">978–9644220975</string>
    <string name="summary4">استاد عشق داستان زندگی پر فراز ونشیب مردی است که در تمام زندگی خود همواره درس ایمان و اعتقاد را با اعمال اش به ما می آموزد. زندگی مردی که با تلاش و پشتکار و با ایمان راسخ و البته به واسطه ی تربیت مادری بزرگ و فداکار بر تمام مشکلات زندگی غلبه کرد و هرگز در این راه مایوس و ناامید نشد.
استاد عشق درس زندگی پرفسور حسابی است به قلم فرزندشان ایرج حسابی که روحیه ی تلاش و ایثار را به خواننده می آموزد.</string>

    <string name="title5">من ادواردو نیستم</string>
    <string name="author5">گروه فرهنگی شهید ابراهیم هادی
    \n
    </string>
    <string name="publisher5">انتشارات شهید ابراهیم هادی</string>
    <string name="ISBN5">978–6007841563</string>
    <string name="summary5">کتاب پیش رو دربردارنده ی زندگینامه و داستان های کوتاه الهام بخش از ثروتمندترین شهید شیعه ایتالیایی، ادواردو (مهدی) آنیلی، است. شهید برجسته ای که برای چنگ زدن به راه حقیقت از تمامی ارزش های خود دست کشید و جان خود را فدای اسلام و عرفان کرد.</string>

    <string name="title6">دختران آفتاب</string>
    <string name="author6">امیرحسین بانکی، بهزاد دانشگر، محمدرضا رضایتمند
    \n
    </string>
    <string name="publisher6">سروش</string>
    <string name="ISBN6">978–9641211143</string>
    <string name="summary6">رمان «دختران آفتاب» به برخی از پرسش های مطرح در حوزه نقش اجتماعی زنان با بیانی روان و داستانی پاسخ می دهد. نویسندگان این رمان می کوشند تا منزلت، شخصیت و جایگاه واقعی زن را به خودش، اطرافیانش و جامعه اش همان گونه که شایسته و بایسته وی است بشناسانند. در این رمان به زیبایی و در سبک و شیوه داستانی به بسیاری از پرسش های مطرح درباره نقش اجتماعی زن و لوازم و پیامدهای آن اشاره شده است.</string>

    <string name="title7">پدر، عشق و پسر</string>
    <string name="author7">سیدمهدی شجاعی</string>
    <string name="publisher7">نیستان</string>
    <string name="ISBN7">978–9643373290</string>
    <string name="summary7">سید مهدی شجاعی در کتاب پدر، عشق و پسر به زندگی حضرت علی اکبر (ع) پرداخته است و در قالب داستانی زیبا و لطیف، در ده مجلس، صحنه‌هایی از زندگی آن حضرت را به تصویر می‌کشد.
راوی داستان، عقاب، اسب حضرت علی اکبر (ع) است و مخاطب راوی، مادر گرامی حضرت، لیلی، بنت ابی مره است. در ده مجلس داستان، همراه با آن حضرت به زندگی امام قدم می‌گذاریم و در مجالس پایانی به داستان شهادت حضرت می‌رسیم. اما هر کدام از برش‌های کتاب نیز به نوعی به واقعه کربلا مربوط می‌شوند و از این رو، تک تک خطوط کتاب، رنگ و بوی عاشورایی خود را حفظ کرده است. </string>

    <string name="title8">سلام بر ابراهیم</string>
    <string name="author8">گروه فرهنگی شهید ابراهیم هادی
    \n
    </string>
    <string name="publisher8">انتشارات شهید ابراهیم هادی</string>
    <string name="ISBN8">978–9643028619</string>
    <string name="summary8">سلام بر ابراهیم مجموعه‌ای است که در قالب زندگینامه و ۶۹ خاطره درباره شهید بزرگوار و مفقودالاثر «ابراهیم هادی» نوشته شده است. این کتاب حاصل بیش از پنجاه مصاحبه از خانواده و دوستان آن شهید است که همگی در گردآوری این مجموعه ارزشمند همکاری کرده‌اند. ابراهیم هادی از شهدای بزرگ هشت سال دفاع مقدس است و شناخت ویژگی‌ها و رفتارهای شخصیتی این شهید بزرگوار می‌تواند برای رشد و تعالی روحی همه‌ی ما مفید و ارزشمند باشد.</string>

</resources>